add healthpackage module

--- a/10.2.0/angular/src/app/doctors/view-prescription/view-prescription.component.html
+++ b/10.2.0/angular/src/app/doctors/view-prescription/view-prescription.component.html
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="prescription-meta">
-          <div class="prescription-id">RX-{{prescription?.id| number:'3.0'}}</div>
+          <div class="prescription-id">Prescription ID :- {{prescription?.id}}</div>
           <div class="prescription-date">{{prescription?.issueDate | date:'fullDate'}}</div>
         </div>
       </div>
