--- a/10.2.0/angular/src/app/lab-technician/view-lab-report/view-lab-report.component.html
+++ b/10.2.0/angular/src/app/lab-technician/view-lab-report/view-lab-report.component.html
@@ -1,74 +1,74 @@
-<div class="container p-4 border rounded bg-white" *ngIf="report">
-    <div class="d-flex justify-content-between">
-        <div>
-            <p>
-                {{report.tenantName}}
-            </p>
-        </div>
-        <div>
-            <img src="/assets/img/download.jpg" class=" w-75" />
-        </div>
+<div class="lab-report-card shadow-lg p-4" *ngIf="report">
+  <!-- Header Section -->
+  <div class="d-flex justify-content-between align-items-center border-bottom pb-3 mb-3">
+    <div>
+      <h5 class="mb-1 text-uppercase fw-bold text-muted">{{ report.tenantName }}</h5>
+      <small class="text-secondary">Diagnostic Center</small>
     </div>
-    <h4 class="text-center text-primary mb-3">LABORATORY REPORT</h4>
+    <img src="/assets/img/download.jpg" alt="Logo" class="lab-logo" />
+  </div>
 
-    <div class="row mb-2">
-        <div class="col-md-6">
-            <strong>Name:</strong> {{ report.patientName }}
-        </div>
-        <div class="col-md-6 text-right">
-            <strong>Patient ID:</strong> {{ report.patientId }}
-        </div>
-    </div>
+  <!-- Report Title -->
+  <h3 class="text-center text-primary fw-bold mb-4 border-bottom pb-2">Laboratory Report</h3>
 
-    <div class="row mb-2">
-        <div class="col-md-4">
-            <strong>Date:</strong> {{ report.recordedDate | date: 'dd/MM/yyyy' }}
-        </div>
-        <div class="col-md-4 text-center">
-            <strong>Age:</strong> {{ calculateAgeDisplay(report.patientDateOfBirth) }}
-        </div>
-        <div class="col-md-4 text-right">
-            <strong>Sex:</strong> {{ report.gender }}
-        </div>
-    </div>
+  <!-- Patient & Test Info -->
+  <div class="row mb-3">
+    <div class="col-md-6"><strong>Patient Name:</strong> {{ report.patientName }}</div>
+    <div class="col-md-6 text-md-end"><strong>Patient ID:</strong> {{ report.patientId }}</div>
+  </div>
+  <div class="row mb-4">
+    <div class="col-md-6"><strong>Referring Doctor:</strong> {{ report.doctorName }}</div>
+    <div class="col-md-6 text-md-end"><strong>Report ID:</strong> {{ report.id }}</div>
+  </div>
+  <div class="row mb-3">
+    <div class="col-md-4"><strong>Date:</strong> {{ report.recordedDate | date: 'dd/MM/yyyy' }}</div>
+    <div class="col-md-4 text-center"><strong>Age:</strong> {{ calculateAgeDisplay(report.patientDateOfBirth) }}</div>
+    <div class="col-md-4 text-md-end"><strong>Gender:</strong> {{ report.gender }}</div>
+  </div>
 
-    <div class="row mb-4">
-        <div class="col-md-6">
-            <strong>Doctor:</strong> {{ report.doctorName }}
-        </div>
-        <div class="col-md-6 text-right">
-            <strong>Test ID:</strong> {{ report.id }}
-        </div>
-    </div>
+  <!-- Test Name -->
+  <h5 class="text-center text-success border rounded-pill py-2 px-3 bg-light d-inline-block mx-auto mb-4">
+    Report: {{ report.testName }}
+  </h5>
 
-    <h5 class="text-center text-success mb-3">Complete {{ report.testName }} Report</h5>
-
-    <table class="table table-bordered">
-        <thead class="thead-light">
-            <tr>
-                <th>Test Name</th>
-                <th>Result</th>
-                <th>Normal Range</th>
-                <th>Units</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of report.labReportResultItem">
-                <td>{{ item.test }}</td>
-                <td>{{ item.result }}</td>
-                <td>{{ item.minValue }} - {{item.maxValue}}</td>
-                <td>{{ item.unit }}</td>
-                <td>
-                    <p-tag [value]="item.flag" [severity]="getSeverity(item.flag)"></p-tag>
-                </td>
-            </tr>
-        </tbody>
+  <!-- Table of Results -->
+  <div class="table-responsive">
+    <table class="table table-bordered table-striped align-middle text-center">
+      <thead class="table-dark">
+        <tr>
+          <th>Test Name</th>
+          <th>Result</th>
+          <th>Normal Range</th>
+          <th>Units</th>
+          <th>Flag</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of report.labReportResultItem">
+          <td class="text-start ps-3">{{ item.test }}</td>
+          <td>{{ item.result }}</td>
+          <td>
+            <ng-container *ngIf="item.minValue != null && item.maxValue != null; else noRange">
+              {{ item.minValue }} - {{ item.maxValue }}
+            </ng-container>
+            <ng-template #noRange>-</ng-template>
+          </td>
+          <td>{{ item.unit || '-' }}</td>
+          <td>
+            <ng-container *ngIf="item.flag && item.flag.trim() !== ''; else noFlag">
+              <p-tag [value]="item.flag" [severity]="getSeverity(item.flag)"></p-tag>
+            </ng-container>
+            <ng-template #noFlag>-</ng-template>
+          </td>
+        </tr>
+      </tbody>
     </table>
+  </div>
 
-    <div class="text-right mt-5">
-        <i>Digitally signed by</i><br />
-        <strong>{{ report.doctorName }}</strong><br>
-        <p>Registration Number : {{ report.doctorRegistrationNumber }}</p>
-    </div>
+  <!-- Digital Signature -->
+  <div class="text-end mt-5">
+    <p class="fst-italic mb-0">Digitally Signed By</p>
+    <h6 class="fw-bold mb-0">{{ report.doctorName }}</h6>
+    <small class="text-secondary">Reg No: {{ report.doctorRegistrationNumber }}</small>
+  </div>
 </div>
